[UPDATE] ignore specific  files

--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,13 @@ fabric.properties
 *.tar.gz
 *.rar
 
+#ignore what I want files
+test/
+comparablestudy/
+comparableToQ11650/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/java,intellij
+
